--- a/hugo/public/index.html
+++ b/hugo/public/index.html
@@ -10,8 +10,8 @@
 每周三晚8:00点
 Place / 地点 Christian Believers&rsquo; Meeting at Flushing
 法拉盛（地图链接)
-Study of Hebrews with Bro. Dana Congdon and local brothers 查经：希伯来书 康登弟兄带领 Links Latest video streaming link (same time as meeting) / 网上直播 (跟聚会时间一样) 1. 10/17/18 2. 10/24/18
-Sign up for email reminders here 在这里登记电子邮件提醒" />
+Study of Hebrews with Bro. Dana Congdon and local brothers 查经：希伯来书 康登弟兄带领 Links Video streaming (same time as meeting) / 网上直播 (跟聚会时间一样)
+ Week 1, 10/17/18 Week 2, 10/24/18 Week 3, 10/31/18  Sign up for email reminders here 在这里登记电子邮件提醒" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://www.cbmministry.org/wed_study/" />
 
@@ -21,8 +21,8 @@ Sign up for email reminders here 在这里登记电子邮件提醒" />
 每周三晚8:00点
 Place / 地点 Christian Believers&rsquo; Meeting at Flushing
 法拉盛（地图链接)
-Study of Hebrews with Bro. Dana Congdon and local brothers 查经：希伯来书 康登弟兄带领 Links Latest video streaming link (same time as meeting) / 网上直播 (跟聚会时间一样) 1. 10/17/18 2. 10/24/18
-Sign up for email reminders here 在这里登记电子邮件提醒"/>
+Study of Hebrews with Bro. Dana Congdon and local brothers 查经：希伯来书 康登弟兄带领 Links Video streaming (same time as meeting) / 网上直播 (跟聚会时间一样)
+ Week 1, 10/17/18 Week 2, 10/24/18 Week 3, 10/31/18  Sign up for email reminders here 在这里登记电子邮件提醒"/>
 
 
 
@@ -112,9 +112,13 @@ Sign up for email reminders here 在这里登记电子邮件提醒"/>
 
 <h5 id="links">Links</h5>
 
-<p><a href="https://www.youtube.com/channel/UC7UZEHXdMH0Y3DwmdzITyow">Latest video streaming link (same time as meeting) / 网上直播 (跟聚会时间一样)</a>
-1. <a href="https://www.youtube.com/watch?v=ybarWxXomX0&amp;feature=youtu.be">10/17/18</a>
-2. <a href="https://www.youtube.com/watch?v=GgqdfXQ06MQ&amp;feature=youtu.be">10/24/18</a></p>
+<p><a href="https://www.youtube.com/channel/UC7UZEHXdMH0Y3DwmdzITyow">Video streaming (same time as meeting) / 网上直播 (跟聚会时间一样)</a></p>
+
+<ul>
+<li><a href="https://youtu.be/ybarWxXomX0?t=92">Week 1, 10/17/18</a></li>
+<li><a href="https://youtu.be/GgqdfXQ06MQ?t=675">Week 2, 10/24/18</a></li>
+<li><a href="https://youtu.be/kXC3S9FxDOY?t=725">Week 3, 10/31/18</a></li>
+</ul>
 
 <p><a href="https://goo.gl/forms/D87k7VBsuQMKpyJs2">Sign up for email reminders here 在这里登记电子邮件提醒</a></p>
 
