--- a/hugo/public/index.html
+++ b/hugo/public/index.html
@@ -6,22 +6,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <meta property="og:title" content="" />
-<meta property="og:description" content="Wednesday night Bible study at Flushing / 法拉盛周三查经 Time / 时间 Every Wednesday night 8:00PM
-每周三晚8:00点
-Place / 地点 Christian Believers&rsquo; Meeting at Flushing
-法拉盛（地图链接)
-Study of Hebrews with Bro. Dana Congdon and local brothers 查经：希伯来书 康登弟兄带领 Links Video streaming (same time as meeting) / 网上直播 (跟聚会时间一样)
+<meta property="og:description" content="CBM Bible study on Wednesday / 法拉盛周三查经 Time / 时间 : Every Wednesday night 8:00PM / 每周三晚8:00点
+Place / 地点 : Christian Believers&rsquo; Meeting at Flushing / 法拉盛（地图链接)
+Study of Hebrews with Bro. Dana Congdon and local brothers 查经：希伯来书 康登弟兄带领
+Video streaming (same time as meeting) / 网上直播 (跟聚会时间一样)
  Week 1, 10/17/18 Week 2, 10/24/18 Week 3, 10/31/18  Sign up for email reminders here 在这里登记电子邮件提醒" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://www.cbmministry.org/wed_study/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content=""/>
-<meta name="twitter:description" content="Wednesday night Bible study at Flushing / 法拉盛周三查经 Time / 时间 Every Wednesday night 8:00PM
-每周三晚8:00点
-Place / 地点 Christian Believers&rsquo; Meeting at Flushing
-法拉盛（地图链接)
-Study of Hebrews with Bro. Dana Congdon and local brothers 查经：希伯来书 康登弟兄带领 Links Video streaming (same time as meeting) / 网上直播 (跟聚会时间一样)
+<meta name="twitter:description" content="CBM Bible study on Wednesday / 法拉盛周三查经 Time / 时间 : Every Wednesday night 8:00PM / 每周三晚8:00点
+Place / 地点 : Christian Believers&rsquo; Meeting at Flushing / 法拉盛（地图链接)
+Study of Hebrews with Bro. Dana Congdon and local brothers 查经：希伯来书 康登弟兄带领
+Video streaming (same time as meeting) / 网上直播 (跟聚会时间一样)
  Week 1, 10/17/18 Week 2, 10/24/18 Week 3, 10/31/18  Sign up for email reminders here 在这里登记电子邮件提醒"/>
 
 
@@ -92,25 +90,19 @@ Study of Hebrews with Bro. Dana Congdon and local brothers 查经：希伯来书
 <article class="blog-post">
     
 
-<h2 id="wednesday-night-bible-study-at-flushing-法拉盛周三查经">Wednesday night Bible study at Flushing / 法拉盛周三查经</h2>
+<h2 id="cbm-bible-study-on-wednesday-法拉盛周三查经">CBM Bible study on Wednesday / 法拉盛周三查经</h2>
 
-<h5 id="time-时间">Time / 时间</h5>
+<h5 id="time-时间">Time / 时间 :</h5>
 
-<p>Every Wednesday night 8:00PM</p>
+<p>Every Wednesday night 8:00PM / 每周三晚8:00点</p>
 
-<p>每周三晚8:00点</p>
+<h5 id="place-地点">Place / 地点 :</h5>
 
-<h5 id="place-地点">Place / 地点</h5>
-
-<p><a href="https://www.google.com/maps/place/Christian+Believers+Meeting/@40.7524083,-73.8137922,18z/data=!4m12!1m6!3m5!1s0x89c2603f33468b6d:0xe2592267e26adf67!2sChristian+Believers+Meeting!8m2!3d40.75226!4d-73.81273!3m4!1s0x89c2603f33468b6d:0xe2592267e26adf67!8m2!3d40.75226!4d-73.81273">Christian Believers&rsquo; Meeting at Flushing</a></p>
-
-<p><a href="https://www.google.com/maps/place/Christian+Believers+Meeting/@40.7524083,-73.8137922,18z/data=!4m12!1m6!3m5!1s0x89c2603f33468b6d:0xe2592267e26adf67!2sChristian+Believers+Meeting!8m2!3d40.75226!4d-73.81273!3m4!1s0x89c2603f33468b6d:0xe2592267e26adf67!8m2!3d40.75226!4d-73.81273">法拉盛（地图链接)</a></p>
+<p><a href="https://www.google.com/maps/place/Christian+Believers+Meeting/@40.7524083,-73.8137922,18z/data=!4m12!1m6!3m5!1s0x89c2603f33468b6d:0xe2592267e26adf67!2sChristian+Believers+Meeting!8m2!3d40.75226!4d-73.81273!3m4!1s0x89c2603f33468b6d:0xe2592267e26adf67!8m2!3d40.75226!4d-73.81273">Christian Believers&rsquo; Meeting at Flushing</a> / <a href="https://www.google.com/maps/place/Christian+Believers+Meeting/@40.7524083,-73.8137922,18z/data=!4m12!1m6!3m5!1s0x89c2603f33468b6d:0xe2592267e26adf67!2sChristian+Believers+Meeting!8m2!3d40.75226!4d-73.81273!3m4!1s0x89c2603f33468b6d:0xe2592267e26adf67!8m2!3d40.75226!4d-73.81273">法拉盛（地图链接)</a></p>
 
 <h4 id="study-of-hebrews-with-bro-dana-congdon-and-local-brothers">Study of Hebrews with Bro. Dana Congdon and local brothers</h4>
 
-<h4 id="查经-希伯来书-康登弟兄带领">查经：希伯来书 康登弟兄带领</h4>
-
-<h5 id="links">Links</h5>
+<p>查经：希伯来书 康登弟兄带领</p>
 
 <p><a href="https://www.youtube.com/channel/UC7UZEHXdMH0Y3DwmdzITyow">Video streaming (same time as meeting) / 网上直播 (跟聚会时间一样)</a></p>
 
