changes on home mac

--- a/hugo/public/index.html
+++ b/hugo/public/index.html
@@ -10,7 +10,7 @@
 Place / 地点 : Christian Believers&rsquo; Meeting at Flushing / 法拉盛（地图链接)
 Study of Hebrews with Bro. Dana Congdon and local brothers 查经：希伯来书 康登弟兄带领
 Video streaming (same time as meeting) / 网上直播 (跟聚会时间一样)
- Week 1, 10/17/18 Week 2, 10/24/18 Week 3, 10/31/18  Sign up for email reminders here 在这里登记电子邮件提醒" />
+ Week 1, 10/17/18 Week 2, 10/24/18 Week 3, 10/31/18 Week 4, 11/07/18  Sign up for email reminders here 在这里登记电子邮件提醒" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://www.cbmministry.org/wed_study/" />
 
@@ -20,7 +20,7 @@ Video streaming (same time as meeting) / 网上直播 (跟聚会时间一样)
 Place / 地点 : Christian Believers&rsquo; Meeting at Flushing / 法拉盛（地图链接)
 Study of Hebrews with Bro. Dana Congdon and local brothers 查经：希伯来书 康登弟兄带领
 Video streaming (same time as meeting) / 网上直播 (跟聚会时间一样)
- Week 1, 10/17/18 Week 2, 10/24/18 Week 3, 10/31/18  Sign up for email reminders here 在这里登记电子邮件提醒"/>
+ Week 1, 10/17/18 Week 2, 10/24/18 Week 3, 10/31/18 Week 4, 11/07/18  Sign up for email reminders here 在这里登记电子邮件提醒"/>
 
 
 
@@ -110,6 +110,7 @@ Video streaming (same time as meeting) / 网上直播 (跟聚会时间一样)
 <li><a href="https://youtu.be/ybarWxXomX0?t=92">Week 1, 10/17/18</a></li>
 <li><a href="https://youtu.be/GgqdfXQ06MQ?t=675">Week 2, 10/24/18</a></li>
 <li><a href="https://youtu.be/kXC3S9FxDOY?t=725">Week 3, 10/31/18</a></li>
+<li><a href="https://youtu.be/qkfbJlYl1kA?t=655">Week 4, 11/07/18</a></li>
 </ul>
 
 <p><a href="https://goo.gl/forms/D87k7VBsuQMKpyJs2">Sign up for email reminders here 在这里登记电子邮件提醒</a></p>
